--- a/test-output/old/NopCommerce Suite/methods-alphabetical.html
+++ b/test-output/old/NopCommerce Suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>nopCommerce Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="adc16e">  <td>20/11/11 14:15:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.nopcommerce.testCases.AddCustomerTest_003@2f40a43]">addNewCustomer</td> 
-  <td>TestNG-tests-1@133565809</td>   <td></td> </tr>
-<tr bgcolor="72b167">  <td>20/11/11 14:15:00</td>   <td>-5953</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.AddCustomerTest_003@2f40a43]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@133565809</td>   <td></td> </tr>
-<tr bgcolor="72b167">  <td>20/11/11 14:16:35</td>   <td>89095</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.AddCustomerTest_003@2f40a43]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@133565809</td>   <td></td> </tr>
+<tr bgcolor="81e873">  <td>20/11/26 15:00:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginDDT_002@76f2bbc1]">loginTest</td> 
+  <td>TestNG-tests-1@976009887</td>   <td></td> </tr>
+<tr bgcolor="81e873">  <td>20/11/26 15:00:38</td>   <td>9039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginDDT_002@76f2bbc1]">loginTest</td> 
+  <td>TestNG-tests-1@976009887</td>   <td></td> </tr>
+<tr bgcolor="81e873">  <td>20/11/26 15:01:14</td>   <td>45101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginDDT_002@76f2bbc1]">loginTest</td> 
+  <td>TestNG-tests-1@976009887</td>   <td></td> </tr>
+<tr bgcolor="81e873">  <td>20/11/26 15:01:50</td>   <td>81206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginDDT_002@76f2bbc1]">loginTest</td> 
+  <td>TestNG-tests-1@976009887</td>   <td></td> </tr>
+<tr bgcolor="80ba84">  <td>20/11/26 15:00:08</td>   <td>-20564</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginDDT_002@76f2bbc1]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@976009887</td>   <td></td> </tr>
+<tr bgcolor="80ba84">  <td>20/11/26 15:02:26</td>   <td>117247</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.TC_LoginDDT_002@76f2bbc1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@976009887</td>   <td></td> </tr>
 </table>
